--- a/client/src/components/Navbarfrontside/navmobilefront.css
+++ b/client/src/components/Navbarfrontside/navmobilefront.css
@@ -7,6 +7,10 @@
   justify-content: space-between;
   display: flex;
   list-style-type: none;
+
+  box-shadow: 3px -2px 10px 4px rgba(0,0,0,0.43);
+  -webkit-box-shadow: 3px -2px 10px 4px rgba(0,0,0,0.43);
+  -moz-box-shadow: 3px -2px 10px 4px rgba(0,0,0,0.43);
 }
 .profile-name {
   margin-top: 15px;
@@ -22,6 +26,7 @@
   width: 210px;
   background-color: #ffffff;
   margin-top: 10px;
+  
 }
 
 .sidebar-mobile-nav {
@@ -35,6 +40,7 @@
 .sidebar-mobile-nav li svg {
   margin-right: 15px;
   color: black;
+  cursor: pointer;
 }
 
 .active li {
