--- a/client/src/components/Navbarfrontside/navwebfront.css
+++ b/client/src/components/Navbarfrontside/navwebfront.css
@@ -13,6 +13,9 @@
     justify-content: right;
     display: flex;
     list-style-type: none;
+    box-shadow: 3px -2px 10px 4px rgba(0,0,0,0.43);
+    -webkit-box-shadow: 3px -2px 10px 4px rgba(0,0,0,0.43);
+    -moz-box-shadow: 3px -2px 10px 4px rgba(0,0,0,0.43);
   }
   
   .nav-dashboard-front ul {
