--- a/client/src/components/Dashboard/Navbar/navheader.css
+++ b/client/src/components/Dashboard/Navbar/navheader.css
@@ -58,15 +58,9 @@
   width: 45px;
   /* background-color: black; */
   background: rgb(14, 154, 236);
-
   border-radius: 90px;
-  align-items: center;
-  justify-content: center;
-  vertical-align: middle;
-  text-align: center;
-
-  position: relative;
-  margin-top: 10px;
+  margin-right: 15px;
+ 
 }
 
 .profile-nave-avatar h4 {
