--- a/client/src/components/Dashboard/Event/dashboard.css
+++ b/client/src/components/Dashboard/Event/dashboard.css
@@ -1,26 +1,25 @@
 
   /* //user profile information section */
   
-  .profile_items_container {
+  .dashboard_items_container {
     margin-top: 10px;
-    padding: 0px;
   }
-  .public-profile-items {
+  .dashboard-items-info {
     height: 150px;
     margin-top: 10px;
   }
-  .profile-items_design {
+  .dashboard-items_design {
     position: relative;
     display: table-cell;
     text-align: center;
     vertical-align: middle;
     align-items: center;
     justify-content: center;
-    padding-top: 10px;
-    /* margin-top: 20px; */
+    margin-top: 20px;
+   
   }
-  .profile-items_design p {
-    font-size: 20px;
+  .dashboard-items_design p {
+    font-size: 18px;
     font-family: Georgia, "Times New Roman", Times, serif;
   }
   .member-accountcreated-date {
@@ -33,7 +32,11 @@
     justify-content: center;
   }
   
-  /* end user profile page information */
+ /* profile message button design */
+
+ .profile-message{
+     margin-top: 20px;
+ }
  
 
   
