--- a/client/src/components/Dashboard/Event/dashboard.css
+++ b/client/src/components/Dashboard/Event/dashboard.css
@@ -43,3 +43,12 @@
   overflow: scroll;
 
 }
+
+.noposts-design{
+  height: 500px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  position: relative;
+}
