--- a/client/src/components/Dashboard/Event/pagination.css
+++ b/client/src/components/Dashboard/Event/pagination.css
@@ -37,6 +37,7 @@
   }
   .pagination-container a:hover:not(.active) {
     background-color: rgb(26, 29, 23);
+    color: white;
   }
   
   /* end pagination design section */
