--- a/client/src/components/HomePage/Userinfo/Userpublicprofile.css
+++ b/client/src/components/HomePage/Userinfo/Userpublicprofile.css
@@ -4,6 +4,7 @@
 
 .profile-header-margin{
   margin-top: 10px;
+  padding: 0px;
 }
 
 .profile-headers {
@@ -80,22 +81,18 @@
 
 .profile_items_container {
   margin-top: 10px;
-
   padding: 0px;
 }
 .public-profile-items {
   height: 150px;
   margin-top: 10px;
-}
-.profile-items_design {
-  position: relative;
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
   align-items: center;
   justify-content: center;
-  /* margin-top: 20px; */
+  vertical-align: middle;
+  text-align: center;
+  position: relative;
 }
+
 .profile-items_design p {
   font-size: 20px;
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -112,59 +109,8 @@
 
 /* end user profile page information */
 
-.profile-name-date {
-  display: flex;
-}
-.profile-name-avatar {
-  height: 40px;
-  width: 40px;
-  background-color: black;
-  border-radius: 90px;
-  align-items: center;
-  justify-content: center;
-  vertical-align: middle;
-  text-align: center;
-  position: relative;
-}
+/* all events */
 
-.profile-name-avatar-image img {
-  height: 40px;
-  width: 40px;
-  object-fit: cover;
-
-  border-radius: 90px;
-  align-items: center;
-  justify-content: center;
-  vertical-align: middle;
-  text-align: center;
-  position: relative;
-}
-
-.profile-name-avatar p {
-  color: white;
-  border-radius: 90px;
-  height: 40px;
-  width: 40px;
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-  border-radius: 90px;
-}
-.profile-name-post-date {
-  padding: 5px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  line-height: 3px;
-  margin-top: 5px;
-}
-
-.profile-name-size {
-  font-size: 15px;
-}
-
-
-/* user about information */
-
-.user-about-page{
-  padding: 10px;
+.all-events-container{
+  padding: 0px;
 }
