--- a/client/src/components/HomePage/eventorganizersprofile.css
+++ b/client/src/components/HomePage/eventorganizersprofile.css
@@ -2,3 +2,25 @@
   margin-top: 10px;
   margin-bottom: 20px;
 }
+
+.search-container{
+  margin-top: 30px;
+}
+.eventorganizer-search{
+  padding: 30px;
+}
+
+.eventorganizer-search p{
+  background-color: black;
+  color: white;
+  padding: 10px;
+  /* margin-top: 20px!important; */
+  border-radius: 20px;
+  width: auto;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  text-align: center;
+  position: relative;
+}
