--- a/client/src/components/HomePage/DetailsEvents/detailsevents.css
+++ b/client/src/components/HomePage/DetailsEvents/detailsevents.css
@@ -1,16 +1,27 @@
-
-.mobile-view-detailspage{
-    display: none;
+.mobile-view-detailspage {
+  display: none;
 }
+/* .mobile-view-detailspage {
+  padding: 0px!important;
+  margin: 0px!important;
+} */
+
 
 @media (max-width: 700px) {
-  
-    .details-webview {
-      display: none;
-    }
-    .mobile-view-detailspage{
-        display: flex;
-    }
-    
+  .details-webview {
+    display: none;
   }
+  .mobile-view-detailspage {
+    display: flex;
+  }
+}
+.event-form-designs{
+  padding: 15px;
+  margin-top: 10px;
+}
 
+.details-mob-view{
+  padding: 20px;
+  width: 100%;
+  margin-top: 10px;
+}
