--- a/client/src/components/HomePage/DetailsEvents/detailsevents.css
+++ b/client/src/components/HomePage/DetailsEvents/detailsevents.css
@@ -32,3 +32,19 @@
 .moreevents-design{
   margin-top: 20px;
 }
+
+/* single events */
+
+.single-events{
+  margin-top: 10px;
+  padding: 20px;
+
+}
+.single-events:hover{
+  box-shadow: -6px 11px 5px -4px rgba(0, 0, 0, 0.42);
+  -webkit-box-shadow: -6px 11px 5px -4px rgba(0, 0, 0, 0.42);
+  -moz-box-shadow: -6px 11px 5px -4px rgba(0, 0, 0, 0.42);
+
+  cursor: pointer;
+  transition-duration: 1s;
+}
