--- a/client/src/components/HomePage/DetailsEvents/detailsevents.css
+++ b/client/src/components/HomePage/DetailsEvents/detailsevents.css
@@ -6,7 +6,6 @@
   margin: 0px!important;
 } */
 
-
 @media (max-width: 700px) {
   .details-webview {
     display: none;
@@ -15,36 +14,44 @@
     display: flex;
   }
 }
-.event-form-designs{
+.event-form-designs {
   padding: 15px;
   margin-top: 10px;
 }
 
-.details-mob-view{
+.details-mob-view {
   padding: 20px;
   width: 100%;
   margin-top: 10px;
 }
 
-
 /* moreevents design */
 
-.moreevents-design{
+.moreevents-design {
   margin-top: 20px;
 }
 
 /* single events */
 
-.single-events{
+.single-events {
   margin-top: 10px;
   padding: 20px;
-
 }
-.single-events:hover{
+.single-events:hover {
   box-shadow: -6px 11px 5px -4px rgba(0, 0, 0, 0.42);
   -webkit-box-shadow: -6px 11px 5px -4px rgba(0, 0, 0, 0.42);
   -moz-box-shadow: -6px 11px 5px -4px rgba(0, 0, 0, 0.42);
 
   cursor: pointer;
   transition-duration: 1s;
+}
+
+/* join event button */
+
+.join-event-button {
+  margin-top: 10px;
+  width: 50%;
+  border-radius: 20px;
+  color: white;
+  background-color: black;
 }
