--- a/client/src/components/HomePage/Allevents.css
+++ b/client/src/components/HomePage/Allevents.css
@@ -105,4 +105,15 @@
 }
 
 
+/* trending events tag design */
 
+.trending{
+  background-color: blueviolet;
+  border-radius: 10px;
+  padding: 5px;
+  block-size: fit-content;
+  color: white;
+  width: fit-content;
+  margin-left: 60px;
+  font-size: 14px;
+}
