--- a/client/src/components/HomePage/Allevents.css
+++ b/client/src/components/HomePage/Allevents.css
@@ -65,6 +65,8 @@
   font-size: 15px;
 }
 
+/* end userinfo in the event post */
+
 /* event date and location design */
 .events-date-and-place {
   display: flex;
